<resources>
    <string name="app_name">Xenoblade Chronicles 3 Companion</string>
    <string name="app_name_short">XC3C</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="xenoblade_chronicles_3">Xenoblade Chronicles 3</string>
    <string name="companion">Companion</string>
    <string name="unique_monsters">Unique Monsters</string>
    <string name="side_quests">Side Quests</string>
    <string name="characters">Characters</string>
    <string name="separation_dot">• Lvl</string>
    <string name="level">Level</string>
    <string name="requires">Requires</string>
    <string name="completed">Completed</string>
    <string name="defeated">Defeated</string>
    <string name="small_art_of_monster">Small art of monster</string>
    <string name="about">About</string>
    <string name="accolades">Accolades</string>
    <string name="about_intro">Xenoblade Chronicles 3 is a role-playing video game developed by Monolith Soft and published by Nintendo on July 29, 2022 for the Nintendo Switch.\n\nThis app is meant to help you keep track of what you have and have not done in the vast world of Aionios!\n\nBelow is some information that may help you navigate and understand your new companion.</string>
    <string name="logo_description">The logo of Xenoblade Chronicles 3</string>
    <string name="unique_monsters_header">About Unique Monsters</string>
    <string name="about_unique_monsters">Unique Monsters are everywhere throughout Xenoblade Chronicles 3. They are strong foes with higher stats than other enemies of their level. Some Unique Monsters are even higher level than your party\'s maximum level. These are called Superbosses.\n\nAs for your companion, within the Unique Monsters Menu, every one of the game\'s 141 Unique Monsters will be listed, along with their levels, locations, and a picture to help you with your search. Superbosses have their names in red and another noticeable indicator on their entries!</string>
    <string name="side_quests_header">About Side Quests</string>
    <string name="about_side_quests">Side quests are littered throughout every corner of Aionis for you to complete. They are entirely optional, but greatly recommended to get the full experience the world has to offer.\n\nThere are over 190 side quests, with each one being detailed in the <i>Side Quest</i> menu.\n\nThe special Hero Quests are included in this number and offer more special rewards for their completion. Hero Quests are featured in gold with an additional indicator on their entries.</string>
    <string name="characters_header">About Characters</string>
    <string name="about_characters">Xenoblade Chronicles 3 consists of a character-driven story, with over 30 memorable characters important to the overarching plot.\n\nCharacters that are the most integral to the plot <i>(party members, heroes, and enemies)</i> are all detailed in the <i>Characters</i> Menu. There you will find a small picture, the name, class, and affiliation of each character prominent to the history of Aionios.</string>
    <string name="a_red_x_that_signifies_a_quest_has_been_completed">A red X that signifies a quest has been completed.</string>
    <string name="a_preview_image_of_a_quest_that_matches_the_preview_image_of_said_quest_from_in_game_xenoblade_chronicles_3">A preview image of a quest that matches the preview image of said quest from in-game Xenoblade Chronicles 3</string>
    <string name="a_red_x_to_signify_that_the_monster_has_been_defeated">A red X to signify that the monster has been defeated.</string>
    <string name="the_ouroboros_symbol_from_xenoblade_chronicles_3">The Ouroboros Symbol from Xenoblade Chronicles 3</string>
    <string name="the_moebius_symbol_from_xenoblade_chronicles_3">The Moebius Symbol from Xenoblade Chronicles 3</string>
    <string name="the_keves_castle_symbol_from_xenoblade_chronicles_3">The Keves Castle symbol from Xenoblade Chronicles 3</string>
    <string name="the_agnian_castle_symbol_from_xenoblade_chronicles_3">The Agnian Castle symbol from Xenoblade Chronicles 3</string>
    <string name="an_image_of_the_specified_character_from_xenoblade_chronicles_3">An image of the specified character from Xenoblade Chronicles 3</string>
    <string name="party_member">Party Member</string>
    <string name="hero">Hero</string>
    <string name="antagonist">Antagonist</string>
    <string name="unique_monster_completion_label">Unique Monster Completion:</string>
    <string name="superboss_completion_label">Superboss Completion:</string>
    <string name="side_quest_completion_label">Side Quest Completion:</string>
    <string name="hero_quest_completion_label">Hero Quest Completion:</string>
    <string name="overall_completion_label">Overall Completion:</string>
    <string name="percent_0">0%</string>
    <string name="percent_100">100%</string>
    <string name="percent_complete">% complete</string>
    <string name="track_your_progress">Track the progress of your journey through Aionios!</string>
    <string name="track_the_progress_of_your_journey_through_aionios">Track the progress of your journey through Aionios!</string>
    <string name="the_app_s_background_image_the_urayan_titan_with_the_mechonis_s_sword_through_it_in_front_of_the_night_sky">The app\'s background image. The Urayan Titan with the Mechonis\'s sword through it in front of the night sky.</string>
    <string name="noah_and_mio_exchanging_flutes">Noah and Mio exchanging flutes.</string>
    <string name="noah_character_art_from_xenoblade_chronicles_3">Noah character art from Xenoblade Chronicles 3.</string>
    <string name="two_armu_in_front_of_the_setting_sun">Two armu in front of the setting sun.</string>
    <string name="account_create_failure">Failed to create user account.</string>
    <string name="sign_in_failure">Failed to sign into account.</string>
    <string name="welcome_to_aionios">Welcome to Aionios!</string>
    <string name="enter_your_email_address">Enter your email address.</string>
    <string name="enter_your_password">Enter your password.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
</resources>