<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">

    <ImageView
        android:id="@+id/character_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/an_image_of_the_specified_character_from_xenoblade_chronicles_3"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/character_name_text"
        style="@style/name_header_text"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/character_image"
        app:layout_constraintTop_toTopOf="@+id/character_image"
        tools:text="Noah" />

    <TextView
        android:id="@+id/class_text"
        style="@style/sub_heading_20_sp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/character_name_text"
        app:layout_constraintTop_toBottomOf="@+id/character_name_text"
        tools:text="Swordfighter" />

    <TextView
        android:id="@+id/playable_text"
        style="@style/sub_heading_20_sp"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/character_name_text"
        app:layout_constraintTop_toBottomOf="@+id/class_text"
        tools:text="Party Member" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/character_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/character_name_text">

        <ImageView
            android:id="@+id/ouroboros_logo"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/the_ouroboros_symbol_from_xenoblade_chronicles_3"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ouroboros" />

        <ImageView
            android:id="@+id/moebius_logo"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/the_moebius_symbol_from_xenoblade_chronicles_3"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/moebius" />

        <ImageView
            android:id="@+id/kevesi_symbol"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/the_keves_castle_symbol_from_xenoblade_chronicles_3"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/kevesi_symbol" />

        <ImageView
            android:id="@+id/agnian_symbol"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/the_agnian_castle_symbol_from_xenoblade_chronicles_3"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/agnian_symbol" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>