<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccoladesFragment">

    <TextView
        android:id="@+id/progress_text_label"
        style = "@style/sub_heading_20_sp"
        android:text="Track the progress of your journey through Aionios!"
        android:textAlignment="center"
        android:textSize="20sp"
        app:fontFamily="@font/helvetica_neue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/monsters_completion_label"
        style="@style/sub_heading_20_sp"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/unique_monster_completion_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_text_label" />

    <TextView
        android:id="@+id/monsters_0_percent"
        style = "@style/info_text_16sp"
        android:layout_marginTop="4dp"
        android:text="@string/percent_0"
        app:layout_constraintStart_toStartOf="@+id/monsters_completion_label"
        app:layout_constraintTop_toBottomOf="@+id/monsters_completion_label" />

    <ProgressBar
        android:id="@+id/monsters_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/monsters_0_percent"
        app:layout_constraintEnd_toStartOf="@+id/monsters_100_percent"
        app:layout_constraintStart_toEndOf="@+id/monsters_0_percent"
        app:layout_constraintTop_toTopOf="@+id/monsters_0_percent" />

    <TextView
        android:id="@+id/monsters_100_percent"
        style = "@style/info_text_16sp"
        android:text="@string/percent_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/monsters_progress_bar" />

    <TextView
        android:id="@+id/superboss_completion_label"
        style = "@style/sub_heading_20_sp"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/superboss_completion_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monsters_progress_bar" />

    <TextView
        android:id="@+id/superboss_0_percent"
        style = "@style/info_text_16sp"
        android:layout_marginTop="4dp"
        android:text="@string/percent_0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/superboss_completion_label" />

    <ProgressBar
        android:id="@+id/superboss_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/superboss_0_percent"
        app:layout_constraintEnd_toStartOf="@+id/superboss_100_percent"
        app:layout_constraintStart_toEndOf="@+id/superboss_0_percent"
        app:layout_constraintTop_toTopOf="@+id/superboss_0_percent" />

    <TextView
        android:id="@+id/superboss_100_percent"
        style = "@style/info_text_16sp"
        android:text="@string/percent_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/superboss_0_percent" />

    <TextView
        android:id="@+id/side_quest_completion_label"
        style = "@style/sub_heading_20_sp"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/side_quest_completion_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/superboss_progress_bar" />

    <TextView
        android:id="@+id/side_quest_0_percent"
        style = "@style/info_text_16sp"
        android:layout_marginTop="4dp"
        android:text="@string/percent_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/side_quest_completion_label" />

    <ProgressBar
        android:id="@+id/side_quest_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/side_quest_0_percent"
        app:layout_constraintEnd_toStartOf="@+id/side_quest_100_percent"
        app:layout_constraintStart_toEndOf="@+id/side_quest_0_percent"
        app:layout_constraintTop_toTopOf="@+id/side_quest_0_percent" />

    <TextView
        android:id="@+id/side_quest_100_percent"
        style = "@style/info_text_16sp"
        android:text="@string/percent_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/side_quest_0_percent" />

    <TextView
        android:id="@+id/hero_quest_completion_label"
        style = "@style/sub_heading_20_sp"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/hero_quest_completion_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/side_quest_progress_bar" />

    <TextView
        android:id="@+id/hero_quest_100_percent"
        style = "@style/info_text_16sp"
        android:text="@string/percent_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hero_quest_0_percent" />

    <TextView
        android:id="@+id/hero_quest_0_percent"
        style = "@style/info_text_16sp"
        android:layout_marginTop="4dp"
        android:text="@string/percent_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hero_quest_completion_label" />

    <ProgressBar
        android:id="@+id/hero_quest_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/hero_quest_0_percent"
        app:layout_constraintEnd_toStartOf="@+id/hero_quest_100_percent"
        app:layout_constraintStart_toEndOf="@+id/hero_quest_0_percent"
        app:layout_constraintTop_toTopOf="@+id/hero_quest_0_percent" />

    <TextView
        android:id="@+id/overall_completion_label"
        style = "@style/sub_heading_20_sp"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/overall_completion_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hero_quest_progress_bar" />

    <ProgressBar
        android:id="@+id/overall_completion_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/overall_0_percent"
        app:layout_constraintEnd_toStartOf="@+id/overall_100_percent"
        app:layout_constraintStart_toEndOf="@+id/overall_0_percent"
        app:layout_constraintTop_toTopOf="@+id/overall_0_percent" />

    <TextView
        android:id="@+id/overall_100_percent"
        style = "@style/info_text_16sp"
        android:text="@string/percent_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/overall_0_percent" />

    <TextView
        android:id="@+id/overall_0_percent"
        style = "@style/info_text_16sp"
        android:layout_marginTop="4dp"
        android:text="@string/percent_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overall_completion_label" />


</androidx.constraintlayout.widget.ConstraintLayout>